[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://npc/ui/floor_jump_ui.gd" id="1_script"]

[node name="FloorJumpUI" type="CanvasLayer"]
layer = 101
script = ExtResource("1_script")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.470588)

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -205.0
offset_top = -205.0
offset_right = 205.0
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 55.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "楼层跳跃"
horizontal_alignment = 1

[node name="PreviewContainer" type="PanelContainer" parent="Control/Panel"]
layout_mode = 1
offset_left = 15.0
offset_top = 65.0
offset_right = 303.0
offset_bottom = 353.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="Control/Panel/PreviewContainer"]
layout_mode = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Control/Panel/PreviewContainer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(288, 288)
render_target_update_mode = 4

[node name="FloorSelection" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -60.0
offset_right = -10.0
offset_bottom = 60.0
grow_horizontal = 0
grow_vertical = 2
alignment = 1

[node name="UpButton" type="Button" parent="Control/Panel/FloorSelection"]
layout_mode = 2
text = "▲"

[node name="FloorLabel" type="Label" parent="Control/Panel/FloorSelection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "主塔
1 层"
horizontal_alignment = 1

[node name="DownButton" type="Button" parent="Control/Panel/FloorSelection"]
layout_mode = 2
text = "▼"

[node name="JumpButton" type="Button" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -120.0
offset_right = -10.0
offset_bottom = -75.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "点击跳跃"

[node name="CloseButton" type="Button" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -45.0
offset_right = 100.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "返回游戏"

[connection signal="pressed" from="Control/Panel/FloorSelection/UpButton" to="." method="_on_up_button_pressed"]
[connection signal="pressed" from="Control/Panel/FloorSelection/DownButton" to="." method="_on_down_button_pressed"]
[connection signal="pressed" from="Control/Panel/JumpButton" to="." method="_on_jump_button_pressed"]
[connection signal="pressed" from="Control/Panel/CloseButton" to="." method="_on_close_button_pressed"]
